5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4373/executions/1721_3062.log
== TEST (2019-05-02 18:33:29) 
-- CODE:
q= float(input("Quantidade de peca de ouro:"))
n= float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d= float(input(" Fator do sucesso ( Entre 1 a 10):")
if(q<30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 5
    print("PO insuficiente")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:34) 
-- CODE:
q= float(input("Quantidade de peca de ouro:"))
n= float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d= float(input(" Fator do sucesso ( Entre 1 a 10):")
if(q<30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 5
    print("PO insuficiente")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:49) 
-- CODE:
q= float(input("Quantidade de peca de ouro:"))
n= float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d= float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q<30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 4
    if(q<30)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:09) 
-- CODE:
q= float(input("Quantidade de peca de ouro:"))
n= float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d= float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 4
    if(q < 30)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:01) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 4
    if(q < 30)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:10) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if (q < 30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 4
    if (q < 30)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:15) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30)
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 4
    if(q < 30)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:37) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(1<=d=<10)
			print(Entrada invalida)
			else:
			if(q=100)
			f=d*10
			else:
			if(q=30)
			f=d+3
			else:
			if(q=50)
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 7
    if(1<=d=<10)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:02) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(1<=d=<10):
			print(Entrada invalida)
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 7
    if(1<=d=<10):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:12) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(1<= d =<10):
			print(Entrada invalida)
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 7
    if(1<= d =<10):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:18) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(1 <= d =< 10):
			print(Entrada invalida)
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 7
    if(1 <= d =< 10):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:24) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(1 < = d = < 10):
			print(Entrada invalida)
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 7
    if(1 < = d = < 10):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:32) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print(Entrada invalida)
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print(Entrada invalida)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:43) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print("Entrada invalida")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print("Entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:01) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print("Entradainvalida")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print("Entradainvalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:13) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print(" Entrada invalida ")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print(" Entrada invalida ")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:38) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print("Entrada invalida"):
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print("Entrada invalida"):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:56) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print("Entrada invalida")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print("Entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:48) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print("entrada invalida")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print("entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:56) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print ("Entrada invalida")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print ("Entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:43:22) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
else:
			if(d<1)or(d>10):
			print("Entrada invalida")
			else:
			if(q=100):
			f=d*10
			else:
			if(q=30):
			f=d+3
			else:
			if(q=50):
			f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    print("Entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:43) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q=100):
	f=d*10
elif(q=30):
	f=d+3
elif(q=50):
	f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    elif(q=100):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:46) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q=100):
	f=d*10
elif(q=30):
	f=d+3
elif(q=50):
	f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 8
    elif(q=100):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:57) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=float(input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q==100):
	f=d*10
elif(q==30):
	f=d+3
elif(q==50):
	f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=float(input())
ValueError: could not convert string to float: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:47:33) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q==100):
	f=d*10
elif(q==30):
	f=d+3
elif(q==50):
	f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 2
    n=input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:47:35) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)"))
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q==100):
	f=d*10
elif(q==30):
	f=d+3
elif(q==50):
	f=d+5
print(f)	
print(n)
print(d)

-- ERROR:
File "XXXX", line 2
    n=input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:47:47) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q==100):
	f=d*10
elif(q==30):
	f=d+3
elif(q==50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:04) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q==100):
	f=d*10
elif(q==30):
	f=d+3
elif(q==50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:55) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:12) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- EXECUTION TIME:
0.182744
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90.0
ESPADA
9.0
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
20.0
FAQUINHA
2.0
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:20) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:32) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- EXECUTION TIME:
0.206625
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90.0
ESPADA
9.0
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
20.0
FAQUINHA
2.0
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:39) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:53) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- EXECUTION TIME:
0.153033
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90.0
ESPADA
9.0
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
20.0
FAQUINHA
2.0
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:58) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:16) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- EXECUTION TIME:
0.149071
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90.0
ESPADA
9.0
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
20.0
FAQUINHA
2.0
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:18) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:44) 
-- CODE:
q=float(input("Quantidade de peca de ouro:"))
n=input(" Nome da arma ( ESPADA, MACHADO ou MARRETA)")
d=float(input(" Fator do sucesso ( Entre 1 a 10):"))
if(q < 30):
	print("PO insuficiente")
elif(d<1 or d>10):
	print("Entrada invalida")
elif(q>=100):
	f=d*10
elif(q>=30):
	f=d+3
elif(q>=50):
	f=d+5
print(f)	
print(n)
print(d)

-- OUTPUT:
90.0
ESPADA
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
